--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
 	"displayName": "Open Symlink Source",
 	"description": "Open the source of editing symlink file in vscode.",
 	"publisher": "AlanZhang",
+	"repository": {
+    "type": "git",
+    "url": "https://github.com/zcfan/vscode-open-symlink-source"
+  },
 	"version": "0.0.1",
 	"engines": {
 		"vscode": "^1.52.0"
